Fixed searching, small bug fixes in html

--- a/simpleFilmBase/Views/topGenre/Index.cshtml
+++ b/simpleFilmBase/Views/topGenre/Index.cshtml
@@ -7,4 +7,4 @@
 
 <h2>Top Genre Chart</h2>
 
-<img alt="alternateText" src="@Url.Action("GenerateChart")" />
+<img alt="Loading..." src="@Url.Action("GenerateChart")" />
